[tool.poetry]
name = "savoir-async"
version = "0.1.0"
description = ""
authors = ["David <davigetto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
anyio = "^3.5.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
